# aes-gcm-gpu

./: .dockerignore  .gitignore  CMakeLists.txt  CRITICAL_EVALUATION.md  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT_FULL.md  README.md  STUDY_GUIDE.md  build_gpu.bat  configure_gpu.bat  run_ui.bat  server.py
cpu/: aes_core.cpp  aes_ctr.cpp  aes_gcm_cpu.cpp  ghash.cpp
gpu/: aes_ctr.cu  aes_gcm_gpu.cu  ghash_kernel.cu  mapreduce.cu
include/: aes_gcm.h  aes_gcm_gpu.h  gf128.h  utils.h
tests/: bench_gpu.cu  demo.cpp  nist_vectors.cpp
